@@ -44,7 +44,6 @@ Alien::m4                                      = 0.09
 Alien::MSYS                                    = 0.07
 Alien::MSYS2                                   = 0.02
 Alien::nasm                                    = 0.18
-Alien::o2dll                                   = 0.04
 Alien::Packages::Cygwin                        = 0.03
 Alien::patch                                   = 0.11
 Alien::pkgconf                                 = 0.10
